--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" 
-    content="xSDbTIdsc6sml5YvMa-_UvL8UYX2iNXrBVYK2OZaUS0" />
-    <link rel="canonical"  href="https://family-coach.vercel.app">
-     
-    <link rel="icon"  type="image/svg" href="/icons/favicon.svg">
+    <link rel="icon" type="image/svg" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta property="og:image" content='/icons/favicon.svg' />
+    <title> Чорнобаївський заклад дошкільної освіти &quot;Вишенька&quot; 2 молодша група &quot;Малинка&quot;</title>
+   
   
-  <!-- Google tag (gtag.js) -->
+  
+
 
 
   </head>
