--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta property="og:image" content='/images/logo.png' />
+     <meta property="og:image" content='/images/logo.png'  width="100" height="100"/>
     <title> Чорнобаївський заклад дошкільної освіти &quot;Вишенька&quot; 2 молодша група &quot;Малинка&quot;</title>
    
   
