feat(add gallery): add gallery

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <meta property="og:image" content='/images/logo.png'  width="30" height="30"/>
-    <title>2 молодша група &quot;Малинка&quot;</title>
+    <title>Uрупа &quot;Малинка&quot;</title>
    
   
   
